# Py_WEB_13

./: .gitignore  Dockerfile  README.en.md  README.md  docker-compose.yml  env_example  pyproject.toml  requirements.txt
src/: main.py
src/config/: config.py
src/db/: models.py
src/repository/: auth.py  contacts.py  users.py
src/routes/: auth.py  contacts.py
src/schemas/: user.py
src/services/: auth.py  auth_token.py  emails.py  role.py
src/templates/: index.html
