[tool.poetry]
name = "py-web-13"
version = "0.1.0"
description = ""
authors = ["Serghei <siracencoserghei@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.1"
uvicorn = "0.24.0.post1"
sqlalchemy = "2.0.29"
pydantic = "2.6.4"
alembic = "1.13.1"
jinja2 = "3.1.3"
python-jose = "3.3.0"
passlib = "1.7.4"
python-multipart = "0.0.6"
libgravatar = "1.0.4"
pip = "^24.0"
psycopg2-binary = "2.9.9"
annotated-types = "0.6.0"
anyio = "3.7.1"
bcrypt = "4.1.2"
cffi = "1.16.0"
click = "8.1.7"
cryptography = "42.0.5"
dnspython = "2.6.1"
ecdsa = "0.18.0"
email-validator = "2.1.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httptools = "0.6.1"
idna = "3.6"
mako = "1.3.2"
markupsafe = "2.1.5"
pyasn1 = "0.6.0"
pycparser = "2.22"
pydantic-core = "2.16.3"
python-dotenv = "1.0.1"
pyyaml = "6.0.1"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.1"
starlette = "0.27.0"
typing-extensions = "4.10.0"
uvloop = "0.19.0"
watchfiles = "0.21.0"
websockets = "12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
